chore: scrollbar styles global, fix allotment separator colours

--- a/src/renderer/src/layouts/DesktopLayout/DesktopLayout.module.css
+++ b/src/renderer/src/layouts/DesktopLayout/DesktopLayout.module.css
@@ -8,7 +8,6 @@
 .navbar {
   padding: var(--mantine-spacing-md);
   height: 100%;
-  border-inline-end: 1px solid var(--app-shell-border-color);
 }
 
 .main {
