--- a/src/renderer/src/styles/styles.css
+++ b/src/renderer/src/styles/styles.css
@@ -1,11 +1,10 @@
 :root {
-  --focus-border: transparent;
-  --separator-border: var(--app-shell-border-color);
+  --focus-border: var(--mantine-primary-color-filled);
+  --separator-border: var(--mantine-color-dark-4);
   --scrollbar-width: 6px;
 }
 
-.scrollbar {
-
+* {
   ::-webkit-scrollbar {
     width: var(--scrollbar-width);
   }
